@@ -4,7 +4,7 @@ var PacketeryCheckoutModulePs16 = {
 
     isActive: function () {
         var isCorrectVersion = PacketaModule.tools.isPS16();
-        return isCorrectVersion && this.findDeliveryOptions().length > 0;
+        return isCorrectVersion && this.findDeliveryOptions().length > 0 && $('#opc_checkout').length === 0;
     },
 
     getSelectedInput: function () {
